force-app/main/default/objects/Plan__c/Plan__c.object-meta.xml
<CustomObject>
    <customHelpPage>MyPage</customHelpPage>
    <label>Plan</label>
    <nameField>
        <label>Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Plans</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>