force-app/main/default/objects/Plan__c/fields/Effective__c.field-meta.xml
<CustomField>
    <fullName>Effective__c</fullName>
    <label>Effective</label>
    <type>Date</type>
</CustomField>