force-app/main/default/objects/Plan__c/fields/Eligibility_Desc__c.field-meta.xml
<CustomField>
    <fullName>Eligibility_Desc__c</fullName>
    <label>Eligibility Desc</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Eligible</fullName>
            </value>
            <value>
                <fullName>Not Eligible</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>