force-app/main/default/objects/Plan__c/fields/Eligibility_Through__c.field-meta.xml
<CustomField>
    <fullName>Eligibility_Through__c</fullName>
    <label>Eligibility Through</label>
    <type>Date</type>
</CustomField>