force-app/main/default/objects/Plan__c/fields/On__c.field-meta.xml
<CustomField>
    <fullName>On__c</fullName>
    <formula>IF($Setup.MySetting__c.On__c, &apos;On&apos;, &apos;Off&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>On</label>
    <type>Text</type>
</CustomField>