force-app/main/default/objects/Plan__c/fields/Plan_Desc__c.field-meta.xml
<CustomField>
    <fullName>Plan_Desc__c</fullName>
    <label>Plan Desc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>