force-app/main/default/objects/Plan__c/fields/Regulatory_Agency__c.field-meta.xml
<CustomField>
    <fullName>Regulatory_Agency__c</fullName>
    <label>Regulatory Agency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DOI</fullName>
            </value>
            <value>
                <fullName>DMHC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>