force-app/main/default/objects/Plan__c/fields/Terminiation__c.field-meta.xml
<CustomField>
    <fullName>Terminiation__c</fullName>
    <label>Termination</label>
    <type>Date</type>
</CustomField>